[package]
name = "lebicon"
version = "3.0.0"
authors = ["Nathaniel McCallum <npmccallum@redhat.com>"]
keywords = ["LEB128", "DWARF", "WebAssembly", "wasm", "webasm"]
repository = "https://github.com/npmccallum/lebicon"
description = "Implements codicon traits for LEB128 encoding / decoding"
documentation = "https://docs.rs/lebicon"
license = "Apache-2.0"
readme = "README.md"
edition = "2018"

[badges]
# See https://doc.rust-lang.org/cargo/reference/manifest.html#the-badges-section
github = { repository = "enarx/lebicon", workflow = "test" }
#github = { repository = "enarx/lebicon", workflow = "lint" }
maintenance = { status = "actively-developed" }
is-it-maintained-issue-resolution = { repository = "enarx/lebicon" }
is-it-maintained-open-issues = { repository = "enarx/lebicon" }

[dependencies]
codicon = "3.0"
signrel = "1.0"
uabs = "2.0"

[dev-dependencies]
leb128 = "0.2"
